# galaxy-colonization-simulator

./: CMakeLists.txt  README.md  data_cleaner.py  make_galaxy_3d.py  math.md  test.py
data/: README.md  beta_2_5.py  data_cleaner.py  make_galaxy.py  make_galaxy_2d.py  requirements.txt
simulation/: CONSTANTS.h  Calculator.cpp  Calculator.h  Clock.cpp  Clock.h  Galaxy.cpp  Galaxy.h  KDTree.cpp  KDTree.h  Neighbor.cpp  Neighbor.h  Node.h  Spacecraft.cpp  Spacecraft.h  Star.cpp  Star.h  main.cpp  plan.md  tests.cpp
simulation/include/: Star.h
